--- a/src/main/resources/templates/createUser.html
+++ b/src/main/resources/templates/createUser.html
@@ -64,7 +64,7 @@
 					<label>Choose POBox number</label>
 					<select class="select form-control" name="boxName" require>
 						<option value="">Choose box</option>
-						<option th:each="i : ${#numbers.sequence(1, 999)}" th:value="${i}" th:text="Box_+''+${i}">
+						<option th:each="i : ${#numbers.sequence(1, 999)}" th:value="${i}" th:text="Box+''+${i}">
 					</select>
 				</div>
 				<div class="form-group col-md-4 text-center">
