--- a/src/main/resources/templates/updateUser.html
+++ b/src/main/resources/templates/updateUser.html
@@ -26,7 +26,7 @@
 						<a class="nav-link" th:href="@{/index}">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" th:href="@{/logout}">Logout</a>
+						<a class="nav-link" th:href="@{#}">Logout</a>
 					</li>
 				</ul>
 			</div>
@@ -89,7 +89,7 @@
 		<div class="container-fluid">
 			<div class="row text-center">
 				<div class="col-md-6 pt-3">
-					<img th:src="${/img/comit.png}" height="100">
+					<img th:src="@{/img/comit.png}" height="100">
 					<hr class="light">
 					<p>250 457 xxxx</p>
 					<P>cachecreekpo@gmail.com</P>
