--- a/src/main/resources/templates/createUser.html
+++ b/src/main/resources/templates/createUser.html
@@ -37,11 +37,11 @@
 			<div class="form-row">
 				<div class="form-group col-md-6">
 					<label>First name</label>
-					<input type="text" class="form-control" name="first" placeholder="Type in First name" required>
+					<input type="text" class="form-control" name="firstName" placeholder="Type in First name" required>
 				</div>
 				<div class="form-group col-md-6">
 					<label>Last name</label>
-					<input type="text" class="form-control" name="last" placeholder="Type in Last name" required>
+					<input type="text" class="form-control" name="lastName" placeholder="Type in Last name" required>
 				</div>
 				<div class="form-group col-md-6">
 					<label>User name</label>
@@ -69,11 +69,11 @@
 				</div>
 				<div class="form-group col-md-4 text-center">
 					<label for="inputPassword">Password</label>
-					<input type="password" class="form-control" name="pass" required>
+					<input type="password" class="form-control" name="password" required>
 				</div>
 				<div class="form-group col-md-4 text-center">
 					<label text-center>Confirm password</label>
-					<input type="password" class="form-control" name="pass" required>
+					<input type="password" class="form-control" name="password" required>
 				</div>
 				<div class="form-group col-md-6">
 					<p><strong>Note: </strong>VIP PO box cost $120 a year; Normal PO box is free</p>
