--- a/src/main/resources/templates/updateUser.html
+++ b/src/main/resources/templates/updateUser.html
@@ -36,21 +36,35 @@
 		<h1 class="display-5 mb-3">Update user</h1>
 		<form th:action="@{/updateUser}" method="post">
 			<div class="form-row">
-				<div class="form-group col-md-6">
+
+				<div class="form-group col-md-4">
 					<label>First name</label>
-					<input type="text" class="form-control" name="firstName" th:value="${user?.firstName}" placeholder="Type in first name" required>
+					<input type="text" class="form-control" name="idUser" th:value="${user?.idUser}" readonly>
 				</div>
-				<div class="form-group col-md-6">
+				<div class="form-group col-md-4">
+					<label>First name</label>
+					<input type="text" class="form-control" name="firstName" th:value="${user?.firstName}"
+						placeholder="Type in first name" required>
+				</div>
+				<div class="form-group col-md-4">
 					<label>Last name</label>
-					<input type="text" class="form-control" name="lastName" th:value="${user?.lastName}" placeholder="Type in last name" required>
+					<input type="text" class="form-control" name="lastName" th:value="${user?.lastName}"
+						placeholder="Type in last name" required>
 				</div>
-				<div class="form-group col-md-6">
+				<div class="form-group col-md-4">
 					<label>User name</label>
-					<input type="text" class="form-control" name="userName" th:value="${user?.userName}" placeholder="Type in user name" required>
+					<input type="text" class="form-control" name="userName" th:value="${user?.userName}"
+						placeholder="Type in user name" required>
 				</div>
-				<div class="form-group col-md-6">
+				<div class="form-group col-md-4">
 					<label>Email</label>
-					<input type="email" class="form-control" name="email" th:value="${user?.email}" placeholder="Type in Email">
+					<input type="email" class="form-control" name="email" th:value="${user?.email}"
+						placeholder="Type in Email">
+				</div>
+				<div class="form-group col-md-4">
+					<label>Date rent</label>
+					<input type="date" class="form-control" name="dateRent" th:value="${user?.dateRent}"
+						readonly>
 				</div>
 				<div class="form-group col-md-2">
 					<label>Choose POBox type</label>
@@ -69,11 +83,11 @@
 				</div>
 				<div class="form-group col-md-4 text-center">
 					<label for="inputPassword">Password</label>
-					<input type="password" class="form-control" name="pass" th:value="${user?.password}" required>
+					<input type="password" class="form-control" name="password" th:value="${user?.password}" required>
 				</div>
 				<div class="form-group col-md-4 text-center">
 					<label text-center>Confirm password</label>
-					<input type="password" class="form-control" name="pass" th:value="${user?.password}" required>
+					<input type="password" class="form-control" name="password" th:value="${user?.password}" required>
 				</div>
 				<div class="form-group col-md-6">
 					<p><strong>Note: </strong>VIP PO box cost $120 a year; Normal PO box is free</p>
