--- a/src/main/resources/templates/listUsers.html
+++ b/src/main/resources/templates/listUsers.html
@@ -39,7 +39,7 @@
 		<form>
 			<div class="form-row">
 				<div class="form-group col-md-5">
-					<form th:action="@{/}">
+					<form th:action="@{/listUsers}">
 						Filter: <input type="text" name="keyword" require />
 						&nbsp;
 						<input type="submit" value="Search" />
@@ -114,7 +114,7 @@
 				<div class="col-md-6 pt-3">
 					<img th:src="@{/img/comit.png}" height="100">
 					<hr class="light">
-					<p>250 457 xxxx</p>
+					<p>250 457 2528</p>
 					<P>cachecreekpo@gmail.com</P>
 				</div>
 				<div class="col-md-4">
