--- a/src/main/resources/templates/createUser.html
+++ b/src/main/resources/templates/createUser.html
@@ -64,16 +64,20 @@
 					<label>Choose POBox number</label>
 					<select class="select form-control" name="boxName" require>
 						<option value="">Choose box</option>
-						<option th:each="i : ${#numbers.sequence(1, 999)}" th:value="${i}" th:text="Box+''+${i}">
+						<option th:if="${boxVacancy != null && !boxVacancy.empty}" th:each="box: ${boxVacancy}"
+							th:value="'Box'+${i}" th:text="${box}">
+						</option>
+						<!-- <option th:each="i : ${#numbers.sequence(1, 100)}" th:value="'Box'+${i}" th:text="Box+''+${i}"> </option> -->
 					</select>
 				</div>
 				<div class="form-group col-md-4 text-center">
 					<label for="inputPassword">Password</label>
-					<input type="password" class="form-control" name="password" required>
+					<input type="password" class="form-control" id="pwd" name="password" required>
 				</div>
 				<div class="form-group col-md-4 text-center">
 					<label text-center>Confirm password</label>
-					<input type="password" class="form-control" name="password" required>
+					<input type="password" class="form-control" id="cpwd" name="password" required>
+					<div id="errorMsg"></div>
 				</div>
 				<div class="form-group col-md-6">
 					<p><strong>Note: </strong>VIP PO box cost $120 a year; Normal PO box is free</p>
@@ -109,12 +113,29 @@
 		</div>
 	</footer>
 
+	<script>
+		var password = document.getElementById('pwd');
+		confirm_password = document.getElementById('cpwd');
+		function validatePassword() {
+			if ((confirm_password.value != '') && (password.value != confirm_password.value)) {
+				document.getElementById('errorMsg').innerHTML = 'Passwords don\'t match';
+			} else {
+				document.getElementById('errorMsg').innerHTML = '';
+			}
+		}
+		password.onchange = validatePassword;
+		confirm_password.onkeyup = validatePassword;
+	</script>
+
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 		crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
 		crossorigin="anonymous"></script>
+</body>
+
+</html>pt>
 </body>
 
 </html>
