--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 
 	<div class="container mt-5 w-50">
 		<div class="jumbotron bg-light border border-warning mt-1 py-1" style="min-height:250px;">
-			<h1 class="display-5 text-center" style="margin-top: 20px;">Welcome to Staff log in</h1>
+			<h1 class="display-5 text-center" style="margin-top: 20px;">Welcome to Cache Creek Post Office</h1>
 			<hr class="w-30">
 
 			<form th:action="@{/login}" method="post">
